--- a/style.css
+++ b/style.css
@@ -104,9 +104,10 @@ hr {
 
 #playerDisplay,
 #computerDisplay {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: black;
     opacity: 0.7;
+    margin-bottom: 0.5rem;
 }   
 
 #resultDisplay {
@@ -133,7 +134,7 @@ hr {
 }
 
 .scoreDisplay {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: black;
     opacity: 0.7;
     margin: 20px;
@@ -211,6 +212,10 @@ h1 {
 
 #resultDisplay {
     font-size: 1.5rem;
+}
+
+.scoreDisplay {
+    font-size: 2rem;
 }
 
 }
